<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whiteback"
    tools:context=".Bluetooth">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/trye"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="........"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/listBluetoothe" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Waiting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listBluetoothe"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/musicpicker"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/choose"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/resume"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="Try Again"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/musicpicker"
        app:layout_constraintTop_toBottomOf="@+id/send"
        app:layout_constraintVertical_bias="1.0" />


    <ImageButton
        android:id="@+id/send"
        android:layout_width="146dp"
        android:layout_height="123dp"
        android:background="@drawable/play"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/stop"
        app:layout_constraintEnd_toEndOf="@+id/stop"
        app:layout_constraintStart_toStartOf="@+id/stop"
        app:layout_constraintTop_toTopOf="@+id/stop"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="108dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="33dp"
        android:text="@string/devices"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/musicpicker"
        app:layout_constraintEnd_toStartOf="@+id/stop"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="One person should click on Discover Devices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:text="Second person should click on Find Me."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="21dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="12dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/musicpicker"
        app:layout_constraintEnd_toEndOf="@+id/musicpicker"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/musicpicker"
        app:layout_constraintTop_toTopOf="@+id/musicpicker"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@drawable/tic" />

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="156dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg"
        app:layout_constraintVertical_bias="0.229"
        app:srcCompat="@drawable/pause" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Device is "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listBluetoothe" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="Status: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/msg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listBluetoothe"
        app:layout_constraintVertical_bias="0.100000024" />

    <ListView
        android:id="@+id/listBluetoothe"
        android:layout_width="0dp"
        android:layout_height="133dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="168dp"
        android:alpha="0.8"
        android:background="@drawable/future"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/pointer1"
        android:layout_width="58dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/pointer"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/pointer2"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="11dp"
        android:src="@drawable/pointer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/musicpicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/musicpicker"
        app:layout_constraintTop_toTopOf="@+id/musicpicker" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="58dp"
        android:layout_height="105dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="40dp"
        android:text="Scroll down if you can't find the second device."
        android:background="@drawable/whiteback"
        android:alpha="0.5"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/listBluetoothe"
        app:layout_constraintEnd_toEndOf="@+id/listBluetoothe"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/listBluetoothe"
        app:layout_constraintTop_toTopOf="@+id/listBluetoothe" />

    <Button
        android:id="@+id/listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/yellow"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="Find Me"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/listBluetoothe"
        app:layout_constraintEnd_toStartOf="@+id/discover"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/discover"
        android:layout_width="197dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/yellow"

        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="Discover Devices"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/listBluetoothe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <WebView
        android:id="@+id/player"
        android:layout_width="0dp"
        android:layout_height="136dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/listBluetoothe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discover" >

    </WebView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Make sure that devices are paired first(Bluetooth serttings)."
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


</android.support.constraint.ConstraintLayout>